--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,8 +1,57 @@
-html, body {
+body {
 	height: 100%;
 	margin: 0;
-	padding: 0;
 }
-#map {
+
+#search {
+	width: 100%;
+	display: flex;
+	text-align: center;
+}
+
+#title {
+	text-align: center;
+	margin: 10px 0 10px 0;
+}
+
+#input {
+	flex-grow: 1;
+	padding: 5px 15px;
+	height: 40px;
+}
+
+#result {
+	width: 100%;
 	height: 100%;
+	display: flex;
+}
+
+.list {
+	padding-right: 15px;
+}
+
+#map {
+	order: 2;
+	flex-grow: 4;
+	background-color: white;
+	height: 600px;
+	text-align: center;
+}
+
+#link {
+	font-size: 20px;
+}
+
+@media only screen and (max-device-width : 959px), only screen and (max-width : 959px)  {
+
+#result {
+	flex-direction: column;
+}
+
+.search, .list {
+	font-size: 1.2em;
+}
+
+.list {
+	text-align: center;
 }
